Don't overwrite whole /apps directory
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1515729 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/samples/pom.xml
+++ b/contrib/extensions/healthcheck/samples/pom.xml
@@ -33,7 +33,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Sling-Initial-Content>SLING-CONTENT;overwrite:=true</Sling-Initial-Content>
+                        <Sling-Initial-Content>SLING-CONTENT/apps/hc/demo;path:=/apps/hc/demo;overwrite:=true</Sling-Initial-Content>
                     </instructions>
                 </configuration>
             </plugin>
