--- a/bundles/api/pom.xml
+++ b/bundles/api/pom.xml
@@ -65,9 +65,9 @@
         </dependency>
         
         <dependency>
-            <groupId>biz.aQute</groupId>
+            <groupId>biz.aQute.bnd</groupId>
             <artifactId>bndlib</artifactId>
-            <version>1.50.0</version>
+            <version>2.1.0</version>
             <scope>provided</scope>
         </dependency>
         
@@ -94,7 +94,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
+                <version>2.4.0</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
