SLING-3030 : add a 'convert to sling content-package project' action to the context-menu for a Project under 'Configure' : sets the 'sling-content' facet and configures the jcr_root
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1518664 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/plugin.xml
+++ b/eclipse-ui/plugin.xml
@@ -328,6 +328,23 @@
             class="org.apache.sling.ide.eclipse.ui.internal.console.SlingConsoleFactory"
             label="Sling Console">
       </consoleFactory>
+   </extension>
+   <extension
+         point="org.eclipse.ui.popupMenus">
+      <objectContribution
+            objectClass="org.eclipse.core.resources.IProject"
+            adaptable="true"
+            id="org.apache.sling.ide.eclipse.ui.pluginProjectToolSet">
+
+         <action
+            label="Convert to Sling Content-Package Project"
+            class="org.apache.sling.ide.eclipse.ui.wizards.ConvertToContentPackageAction"
+            menubarPath="org.eclipse.ui.projectConfigure/additions"
+            enablesFor="+"
+            id="org.eclipse.pde.ui.ConvertedProjectWizard">
+      	</action>
+      </objectContribution>
+         
    </extension> 
    
 </plugin>    
