SLING-3009 : add a 'convert to sling/osgi bundle project' action to the context-menu for a Project under 'Configure' : sets the 'sling-bundle' facet
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1518675 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/plugin.xml
+++ b/eclipse-ui/plugin.xml
@@ -341,7 +341,14 @@
             class="org.apache.sling.ide.eclipse.ui.wizards.ConvertToContentPackageAction"
             menubarPath="org.eclipse.ui.projectConfigure/additions"
             enablesFor="+"
-            id="org.eclipse.pde.ui.ConvertedProjectWizard">
+            id="org.apache.sling.ide.eclipse.ui.wizards.ConvertToContentPackageAction">
+      	</action>
+         <action
+            label="Convert to Sling/OSGi Bundle Project"
+            class="org.apache.sling.ide.eclipse.ui.wizards.ConvertToBundleAction"
+            menubarPath="org.eclipse.ui.projectConfigure/additions"
+            enablesFor="+"
+            id="org.apache.sling.ide.eclipse.ui.wizards.ConvertToBundleAction">
       	</action>
       </objectContribution>
          
