--- a/tooling/ide/eclipse-ui/plugin.xml
+++ b/tooling/ide/eclipse-ui/plugin.xml
@@ -341,7 +341,14 @@
             class="org.apache.sling.ide.eclipse.ui.wizards.ConvertToContentPackageAction"
             menubarPath="org.eclipse.ui.projectConfigure/additions"
             enablesFor="+"
-            id="org.eclipse.pde.ui.ConvertedProjectWizard">
+            id="org.apache.sling.ide.eclipse.ui.wizards.ConvertToContentPackageAction">
+      	</action>
+         <action
+            label="Convert to Sling/OSGi Bundle Project"
+            class="org.apache.sling.ide.eclipse.ui.wizards.ConvertToBundleAction"
+            menubarPath="org.eclipse.ui.projectConfigure/additions"
+            enablesFor="+"
+            id="org.apache.sling.ide.eclipse.ui.wizards.ConvertToBundleAction">
       	</action>
       </objectContribution>
          
