Apply naming conventions
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1518923 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/healthchecks/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/contrib/extensions/healthcheck/healthchecks/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -25,18 +25,18 @@
 org.apache.sling.hc.JmxAttributeHealthCheck.name = JMX Attribute Health Check
 org.apache.sling.hc.JmxAttributeHealthCheck.description = Checks the value of a single JMX attribute.
 
-org.apache.sling.hc.ScriptableHealthCheck.name = Scriptable Health Check
+org.apache.sling.hc.ScriptableHealthCheck.name = Apache Sling Scriptable Health Check
 org.apache.sling.hc.ScriptableHealthCheck.description = Uses scripted expressions to verify multiple JMX \
   attributes or other values.
 
-org.apache.sling.hc.DefaultLoginsHealthCheck.name = Default Logins Health Check 
+org.apache.sling.hc.DefaultLoginsHealthCheck.name = Apache Sling  Default Logins Health Check 
 org.apache.sling.hc.DefaultLoginsHealthCheck.description = Expects default logins to fail, used to verify \
     that they are disabled on production systems
     
-org.apache.sling.hc.SlingRequestStatusHealthCheck.name = Sling Request Status Health Check
+org.apache.sling.hc.SlingRequestStatusHealthCheck.name = Apache Sling  Sling Request Status Health Check
 org.apache.sling.hc.SlingRequestStatusHealthCheck.description = Checks the HTTP status of Sling requests.
 
-org.apache.sling.hc.CompositeHealthCheck.name = Composite Health Check 
+org.apache.sling.hc.CompositeHealthCheck.name = Apache Sling  Composite Health Check 
 org.apache.sling.hc.CompositeHealthCheck.description = Executes a set of Health Checks, selected by tags. 
 
 filter.tags.name = Filter tags
