--- a/bundles/servlets/post/pom.xml
+++ b/bundles/servlets/post/pom.xml
@@ -127,8 +127,14 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.osgi</artifactId>
+            <version>2.0.2-incubator</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.jcr.resource</artifactId>
-            <version>2.0.6</version>
+            <version>2.2.9-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
