--- a/pom.xml
+++ b/pom.xml
@@ -127,8 +127,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.jcr.resource</artifactId>
-            <version>2.0.6</version>
+            <artifactId>org.apache.sling.commons.osgi</artifactId>
+            <version>2.0.2-incubator</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
