--- a/it/pom.xml
+++ b/it/pom.xml
@@ -37,7 +37,7 @@
                 <configuration>
                     <systemProperties>
                         <org.ops4j.pax.logging.DefaultServiceLog.level>${org.ops4j.pax.logging.DefaultServiceLog.level}</org.ops4j.pax.logging.DefaultServiceLog.level>
-                        <sling.hc.api.version>${project.version}</sling.hc.api.version>
+                        <sling.hc.core.version>${project.version}</sling.hc.core.version>
                         <felix.shell>${felix.shell}</felix.shell>
                     </systemProperties>
                 </configuration>
@@ -48,7 +48,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.hc.api</artifactId>
+            <artifactId>org.apache.sling.hc.core</artifactId>
             <version>0.0.2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
