SLING-3034 - rename modules: api to core and healthchecks to support
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1519670 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/extensions/healthcheck/core/pom.xml
+++ b/contrib/extensions/healthcheck/core/pom.xml
@@ -14,15 +14,15 @@
     </parent>
 
     <groupId>org.apache.sling</groupId>
-    <artifactId>org.apache.sling.hc.api</artifactId>
+    <artifactId>org.apache.sling.hc.core</artifactId>
     <packaging>bundle</packaging>
     <version>0.0.2-SNAPSHOT</version>
 
-    <name>Sling Health Check API</name>
+    <name>Sling Health Check Core</name>
     <inceptionYear>2013</inceptionYear>
     
     <description>
-        The Sling Health Check API
+        The Sling Health Check Core
     </description>
 
     <properties>
