--- a/contrib/extensions/healthcheck/support/pom.xml
+++ b/contrib/extensions/healthcheck/support/pom.xml
@@ -14,15 +14,15 @@
     </parent>
 
     <groupId>org.apache.sling</groupId>
-    <artifactId>org.apache.sling.hc.healthchecks</artifactId>
+    <artifactId>org.apache.sling.hc.support</artifactId>
     <packaging>bundle</packaging>
     <version>0.0.2-SNAPSHOT</version>
 
-    <name>Sling Health Check Services</name>
+    <name>Sling Health Check Support Components</name>
     <inceptionYear>2013</inceptionYear>
     
     <description>
-        Default Sling Health Check Services
+        Default Sling Health Check Support Components
     </description>
 
     <properties>
@@ -54,7 +54,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.hc.api</artifactId>
+            <artifactId>org.apache.sling.hc.core</artifactId>
             <version>0.0.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
