--- a/contrib/extensions/healthcheck/jmx/pom.xml
+++ b/contrib/extensions/healthcheck/jmx/pom.xml
@@ -57,7 +57,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.hc.api</artifactId>
+            <artifactId>org.apache.sling.hc.core</artifactId>
             <version>0.0.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
@@ -65,12 +65,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.hc.healthchecks</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
-            <scope>test</scope>
         </dependency>
          <dependency>
             <groupId>org.slf4j</groupId>
