--- a/contrib/extensions/healthcheck/webconsole/pom.xml
+++ b/contrib/extensions/healthcheck/webconsole/pom.xml
@@ -53,7 +53,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.hc.api</artifactId>
+            <artifactId>org.apache.sling.hc.core</artifactId>
             <version>0.0.2-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
