SLING-3009 : move maven-dependency-plugin use to the compile phase, to have it ready *before* tycho packaging
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1520064 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/build.properties
+++ b/eclipse-ui/build.properties
@@ -2,5 +2,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               target/sling-tooling-support-install/
 source.. = src/
