SLING-2985 : disabling non-functioning new-wizard for now
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1520325 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/plugin.xml
+++ b/eclipse-ui/plugin.xml
@@ -236,7 +236,7 @@
          </adapter>
       </factory>
    </extension>
-   <extension
+   <!--extension
          point="org.eclipse.ui.newWizards">
       <category
             id="org.apache.sling.ide.eclipse.ui"
@@ -251,7 +251,7 @@
                class="selection.Selection1">
          </selection>
       </wizard>
-   </extension>
+   </extension-->
    <extension
          point="org.eclipse.ui.views.properties.tabbed.propertyContributor">
       <propertyContributor
