SLING-3046 - fix conflicting export/private statements, cause trouble with maven-bundle-plugin 2.4.0
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1521014 13f79535-47bb-0310-9956-ffa450edef68

--- a/bundles/scripting/jsp/pom.xml
+++ b/bundles/scripting/jsp/pom.xml
@@ -61,9 +61,7 @@
                             javax.servlet.jsp.tagext;version=2.1
                         </Export-Package>
                         <Private-Package>
-                            org.apache.sling.scripting.jsp,
-                            !org.apache.sling.scripting.jsp.jasper.runtime,
-                            org.apache.sling.scripting.jsp.jasper.*,
+                            org.apache.sling.scripting.jsp.*,
                             org.apache.juli.logging
                         </Private-Package>
 
