SLING-2788 - use latest Oak + jackrabbit snapshots
git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/bdelacretaz/bdelacretaz-oak-server@1521089 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 
     <properties>
         <sling.java.version>6</sling.java.version>
-        <oak.version>0.8</oak.version>
+        <oak.version>0.9-SNAPSHOT</oak.version>
     </properties>
 
     <build>
