SLING-2989 - [Tooling] integrate with vlt once available
Implement serialization of Java primitive types from .content.xml files
into the repository. Not yet implemented: Name, Path, Reference and
WeakReference.

git-svn-id: https://svn.apache.org/repos/asf/sling/branches/tooling-ide-vlt@1521146 13f79535-47bb-0310-9956-ffa450edef68

--- a/tooling/ide/pom.xml
+++ b/tooling/ide/pom.xml
@@ -15,6 +15,7 @@
         <module>impl-resource-test</module>
 		<module>vlt-wrapper</module>                
 		<module>impl-vlt</module>
+		<module>impl-vlt-test</module>
 		<module>eclipse-core</module>
 		<module>eclipse-ui</module>
 		<module>feature</module>
