SLING-3051 : 'new sling bundle' wizard added to the project. this is based on the org.apache.sling:sling-bundle-archetype archetype - which creates a standalone project without a reactor
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1521472 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/plugin.xml
+++ b/eclipse-ui/plugin.xml
@@ -253,6 +253,21 @@
       </wizard>
    </extension-->
    <extension
+         point="org.eclipse.ui.newWizards">
+      <category
+            id="org.apache.sling.ide.eclipse.ui"
+            name="Sling">
+      </category>
+      <wizard
+            category="org.apache.sling.ide.eclipse.ui"
+            class="org.apache.sling.ide.eclipse.ui.wizards.np.NewSlingBundleWizard"
+            icon="icons/obj16/sling.gif"
+            id="org.apache.sling.ide.eclipse.ui.wizards.np.NewSlingBundleWizard"
+            name="New Sling Bundle Project"
+            project="true">
+      </wizard>
+   </extension>
+   <extension
          point="org.eclipse.ui.views.properties.tabbed.propertyContributor">
       <propertyContributor
             contributorId="org.apache.sling.ide.eclipse-ui.propertyContributor1"
