SLING-2788 - TODO about embedding dependency
git-svn-id: https://svn.apache.org/repos/asf/sling/whiteboard/bdelacretaz/bdelacretaz-oak-server@1521915 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,10 @@
                           org.apache.jackrabbit.oak.spi.security.authentication,
                           *
                         </Import-Package>
+                        
+                        <!-- TODO embedding shouldn't be needed but avoids classloading issues -->
                         <Embed-Dependency>oak-jcr</Embed-Dependency>
+                        
                         <Bundle-Activator>
                             org.apache.sling.oak.server.Activator
                         </Bundle-Activator>
