SLING-3056 : eclipse-m2e-ui plugin and m2e-feature added, resulting from a separation of m2eclipse dependent code from the slingclipse plugins and features. This adds a new feature to the p2update config too.
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1522611 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 		<module>eclipse-core</module>
 		<module>eclipse-ui</module>
 		<module>feature</module>
+		<module>eclipse-m2e-ui</module>
+		<module>m2e-feature</module>
 		<module>p2update</module>
 	</modules>
 
