SLING-3056 : removed a jar from the bin.includes (got moved to eclipse-m2e-ui)
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/tooling/ide@1522802 13f79535-47bb-0310-9956-ffa450edef68

--- a/eclipse-ui/build.properties
+++ b/eclipse-ui/build.properties
@@ -2,6 +2,5 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               OSGI-INF/,\
-               target/sling-tooling-support-install/
+               OSGI-INF/
 source.. = src/
