SLING-3888 - Move groovy extension bundle to contrib/scripting
Relocate the groovy extension bundle under contrib/scripting and also move it to the contrib reactor from the main reactor.


git-svn-id: https://svn.apache.org/repos/asf/sling/trunk@1622011 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/pom.xml
+++ b/contrib/pom.xml
@@ -119,6 +119,7 @@
           <module>scripting/script-console</module>
           <module>scripting/jsp-taglib-atom</module>
           <module>scripting/freemarker</module>
+          <module>scripting/groovy</module>
           <module>scripting/java</module>
           <module>scripting/jst</module>
           <module>scripting/python</module>
